--- a/_posts/Algorithm/2016-11-26-DanielAlgorithm3.2
+++ b/_posts/Algorithm/2016-11-26-DanielAlgorithm3.2
@@ -16,12 +16,7 @@ category: Algorithm
 
 
 
-
-
-
-
-
-# 《 Operation Takedown》 - [Kevin Mitnick](https://en.wikipedia.org/wiki/Kevin_Mitnick)
+# Operation Takedown - [Kevin Mitnick](https://en.wikipedia.org/wiki/Kevin_Mitnick)
 
 <div style="max-width:640px; margin:0 auto 10px;" >
 <div
