--- a/_posts/Algorithm/2016-11-26-DanielAlgorithm3.2
+++ b/_posts/Algorithm/2016-11-26-DanielAlgorithm3.2
@@ -2,6 +2,7 @@
 layout : single
 title : 3.2Learn Data Structure with Daniel --- AVL TREES Code Implement
 category: algorithm
+comments: true
 ---
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
