--- a/_posts/booklist/2019-04-01-Booklist.md
+++ b/_posts/booklist/2019-04-01-Booklist.md
@@ -12,9 +12,17 @@ comments: true
 [r2]: https://scanlibs.com/object-oriented-thought-process-5th/yz5cw79mbn3a/ECNHOkMYYhUPIB0rFFY3DRZ5UCUUGCkSV2cCeUwGdVNBYQtlWlQ4EQw4Xi8LZSgUETJEOQ==
 
 
-[b3]: ../../Images/2019-04
-[b4]: ../../Images/2019-04
-[b5]: ../../Images/2019-04
+[b3]: ../../Images/2019-04/machine-learning-big-data-analyis.jpg
+[r3]: https://www.amazon.com/dp/3110550326/#customerReviews
+
+
+
+[b4]: ../../Images/2019-04/cybersecurity-current-writings-threats-protection.jpg
+[r4]: https://www.amazon.com/dp/147667440X/#customerReviews
+
+[b5]: ../../Images/2019-04/advanced-game-narrative-toolbox.jpg
+[r5]: https://www.amazon.com/dp/1138499633/#customerReviews
+
 [b6]: ../../Images/2019-04
 [b7]: ../../Images/2019-04
 [b8]: ../../Images/2019-04
@@ -26,5 +34,8 @@ comments: true
 |-------------- |----------|---------|---------|----------|
 | 亚马逊图书简介  | 出版时间  | 文件格式 | 文件大小  | Picture  |
 |-------------  |----------| ------- |---------|--------- |
-| [图书链接][r1] | 2019     | PDF     | 12 Mb   |![][b1] |
-| [图书链接][r2] | 2019 | PDF | 10 MB | ![][b2]|    
+| [图书链接][r1] | 2019 | PDF | 12 Mb | ![][b1] |
+| [图书链接][r2] | 2019 | PDF | 10 MB | ![][b2] |    
+| [图书链接][r3] | 2019 | PDF | 10 MB | ![][b3] |
+| [图书链接][r4] | 2019 | PDF | 10 MB | ![][b4] |
+| [图书链接][r5] | 2019 | PDF | 10 MB | ![][b5] |
