remove comment review

--- a/_posts/booklist/2019-04-01-Booklist.md
+++ b/_posts/booklist/2019-04-01-Booklist.md
@@ -6,28 +6,50 @@ comments: true
 ---
 
 [b1]: ../../Images/2019-04/artificial-neural-networks-java-applications.jpg
-[r1]: https://www.amazon.com/dp/1484244206/#customerReviews
+[r1]: https://www.amazon.com/dp/1484244206
 
 [b2]: ../../Images/2019-04/object-oriented-thought-process-5th.jpg
-[r2]: https://www.amazon.com/dp/0135181968/#customerReviews
+[r2]: https://www.amazon.com/dp/0135181968
 
 
 [b3]: ../../Images/2019-04/machine-learning-big-data-analyis.jpg
-[r3]: https://www.amazon.com/dp/3110550326/#customerReviews
+[r3]: https://www.amazon.com/dp/3110550326
 
 
 
 [b4]: ../../Images/2019-04/cybersecurity-current-writings-threats-protection.jpg
-[r4]: https://www.amazon.com/dp/147667440X/#customerReviews
+[r4]: https://www.amazon.com/dp/147667440X
 
 [b5]: ../../Images/2019-04/advanced-game-narrative-toolbox.jpg
-[r5]: https://www.amazon.com/dp/1138499633/#customerReviews
+[r5]: https://www.amazon.com/dp/1138499633
 
-[b6]: ../../Images/2019-04
-[b7]: ../../Images/2019-04
-[b8]: ../../Images/2019-04
+[b6]: ../../Images/2019-04/deep-learning-fundamentals-theory-applications.jpg
+[r6]: https://www.amazon.com/dp/3030060721
+
+[b7]: ../../Images/2019-04/introduction-c-gui-programming.jpg
+[r7]: https://www.amazon.com/dp/1912047659
+
+
+[b8]: ../../Images/2019-04/data-science-marketing-analytics.jpg
+[r8]: https://www.amazon.com/dp/B07LCNZPDX
+
 [b9]: ../../Images/2019-04
+[r9]: df
+
 [b10]: ../../Images/2019-04
+[r11]: a
+
+[b10]: ../../Images/2019-04
+[r11]: a
+[b10]: ../../Images/2019-04
+[r11]: a
+[b10]: ../../Images/2019-04
+[r11]: a
+[b10]: ../../Images/2019-04
+[r11]: a
+[b10]: ../../Images/2019-04
+[r11]: a
+
 
 
 
@@ -39,3 +61,6 @@ comments: true
 | [图书链接][r3] | 2019 | PDF | 10 MB | ![][b3] |
 | [图书链接][r4] | 2019 | PDF | 10 MB | ![][b4] |
 | [图书链接][r5] | 2019 | PDF | 10 MB | ![][b5] |
+| [图书链接][r6] | 2019 | PDF/EPUB | 20 MB | ![][b6] |
+| [图书链接][r7] | 2019 | PDF | 10 MB | ![][b7] |
+| [图书链接][r8] | 2019 | PDF | 10 MB | ![][b8] |
